feat: add user sign out
